# fs-explorer

./: .gitignore  Makefile  README.md  pyproject.toml
data/benchmark/: questions_and_answers.json  report.md  results.json  statistics.json
src/fs_explorer/: agent.py  caching.py  fs.py  main.py
tests/: test_fs.py
